Fixed the volume slider
Removed the invisible mute button that I haven't seen before (Why not pause?)
Made the slider wider to fit the buttons

--- a/flatclient/css/jquery.mobile.flatui.css
+++ b/flatclient/css/jquery.mobile.flatui.css
@@ -2428,7 +2428,6 @@ input.ui-input-text.ui-slider-input {
 	position: relative;
 	overflow: visible;
 	height: 15px;
-	margin: 0 15px 0 68px;
 	top: 6px;
 }
 .ui-slider-track.ui-mini {
